--- a/client/src/styles/bookappointment.css
+++ b/client/src/styles/bookappointment.css
@@ -1,11 +1,15 @@
 @import url(app.css);
-
+.payment-heading{
+  color: var(--light-blue);
+  padding: 0%;
+  margin: 0;
+}
 .modal {
   position: absolute;
-  top: 0%;
+  top: 40%;
   left: 0%;
   width: 100%;
-  height: 99vh;
+  height: 45vh;
   /* background-color: rgba(0, 0, 0, 0.322); */
   z-index: 1;
 }
@@ -14,7 +18,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2rem;
+  gap: 1rem;
   width: 30%;
   padding: 2rem;
   border: 1px solid var(--light-blue);
